@@ -42,6 +42,7 @@ Release ...
 * [nt]roff: The output of long names with ".pm" and stack dumps has been
   fixed.
 * [nt]roff: Nested long-name string references \*[\*...] now work.
+* The "-mpictures" macros have been added from Plan 9 sources.
 * The "picpack" preprocessor has been added.
 * A bug in the supplied realloc() replacement could result in heap
   corruption.
